@@ -1,3 +1,9 @@
+Wed Oct 08 18:37:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	  - Added support for aliasing buddies.
+
 Wed Oct 08 00:33:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
